--- a/extensions/sampling/package.json
+++ b/extensions/sampling/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/extensions.sampling",
-  "version": "0.3.0",
+  "version": "0.3.1-alpha.0",
   "description": "Toa operations sampling",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -19,8 +19,8 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "0.3.0",
-    "@toa.io/generic": "0.3.0",
-    "@toa.io/schemas": "0.3.0"
+    "@toa.io/core": "0.3.1-alpha.0",
+    "@toa.io/generic": "0.3.1-alpha.0",
+    "@toa.io/schemas": "0.3.1-alpha.0"
   }
 }
