--- a/libraries/filesystem/package.json
+++ b/libraries/filesystem/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/filesystem",
-  "version": "0.3.0",
+  "version": "0.3.1-alpha.0",
   "description": "Toa Filesystem Tools",
   "homepage": "https://toa.io",
   "author": {
@@ -23,7 +23,7 @@
   },
   "main": "source/index.js",
   "devDependencies": {
-    "@toa.io/generic": "0.3.0"
+    "@toa.io/generic": "0.3.1-alpha.0"
   },
   "dependencies": {
     "fast-glob": "3.2.12"
