--- a/libraries/pointer/package.json
+++ b/libraries/pointer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/pointer",
-  "version": "0.3.0",
+  "version": "0.3.1-alpha.0",
   "description": "Toa Pointer",
   "homepage": "https://toa.io",
   "author": {
@@ -23,9 +23,9 @@
   },
   "main": "source/index.js",
   "dependencies": {
-    "@toa.io/console": "0.3.0",
-    "@toa.io/generic": "0.3.0",
-    "@toa.io/schema": "0.3.0",
-    "@toa.io/yaml": "0.3.0"
+    "@toa.io/console": "0.3.1-alpha.0",
+    "@toa.io/generic": "0.3.1-alpha.0",
+    "@toa.io/schema": "0.3.1-alpha.0",
+    "@toa.io/yaml": "0.3.1-alpha.0"
   }
 }
