--- a/runtime/boot/package.json
+++ b/runtime/boot/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/boot",
-  "version": "0.3.0",
+  "version": "0.3.1-alpha.0",
   "description": "Toa Boot",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -20,11 +20,11 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/core": "0.3.0",
-    "@toa.io/filesystem": "0.3.0",
-    "@toa.io/generic": "0.3.0",
-    "@toa.io/norm": "0.3.0",
-    "@toa.io/schema": "0.3.0",
+    "@toa.io/core": "0.3.1-alpha.0",
+    "@toa.io/filesystem": "0.3.1-alpha.0",
+    "@toa.io/generic": "0.3.1-alpha.0",
+    "@toa.io/norm": "0.3.1-alpha.0",
+    "@toa.io/schema": "0.3.1-alpha.0",
     "clone-deep": "4.0.1"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
