--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/cli",
-  "version": "0.3.0",
+  "version": "0.3.1-alpha.0",
   "description": "Toa CLI",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -22,11 +22,11 @@
     "@toa.io/runtime": "*"
   },
   "dependencies": {
-    "@toa.io/console": "0.3.0",
-    "@toa.io/generic": "0.3.0",
-    "@toa.io/kubernetes": "0.3.0",
-    "@toa.io/norm": "0.3.0",
-    "@toa.io/yaml": "0.3.0",
+    "@toa.io/console": "0.3.1-alpha.0",
+    "@toa.io/generic": "0.3.1-alpha.0",
+    "@toa.io/kubernetes": "0.3.1-alpha.0",
+    "@toa.io/norm": "0.3.1-alpha.0",
+    "@toa.io/yaml": "0.3.1-alpha.0",
     "find-up": "5.0.0",
     "yargs": "17.6.2"
   },
