--- a/runtime/norm/package.json
+++ b/runtime/norm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/norm",
-  "version": "0.3.0",
+  "version": "0.3.1-alpha.0",
   "description": "Toa declarations normalization and validation",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -19,13 +19,13 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "devDependencies": {
-    "@toa.io/mock": "0.3.0"
+    "@toa.io/mock": "0.3.1-alpha.0"
   },
   "dependencies": {
-    "@toa.io/core": "0.3.0",
-    "@toa.io/generic": "0.3.0",
-    "@toa.io/schema": "0.3.0",
-    "@toa.io/schemas": "0.3.0",
-    "@toa.io/yaml": "0.3.0"
+    "@toa.io/core": "0.3.1-alpha.0",
+    "@toa.io/generic": "0.3.1-alpha.0",
+    "@toa.io/schema": "0.3.1-alpha.0",
+    "@toa.io/schemas": "0.3.1-alpha.0",
+    "@toa.io/yaml": "0.3.1-alpha.0"
   }
 }
