--- a/runtime/runtime/package.json
+++ b/runtime/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/runtime",
-  "version": "0.3.0",
+  "version": "0.3.1-alpha.0",
   "description": "Toa Runtime",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -22,24 +22,24 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@toa.io/bindings.amqp": "0.3.0",
-    "@toa.io/bindings.http": "0.3.0",
-    "@toa.io/bindings.loop": "0.3.0",
-    "@toa.io/boot": "0.3.0",
-    "@toa.io/bridges.node": "0.3.0",
-    "@toa.io/cli": "0.3.0",
-    "@toa.io/core": "0.3.0",
-    "@toa.io/extensions.configuration": "0.3.0",
-    "@toa.io/extensions.exposition": "0.3.0",
-    "@toa.io/extensions.origins": "0.3.0",
-    "@toa.io/extensions.sampling": "0.3.0",
-    "@toa.io/norm": "0.3.0",
-    "@toa.io/operations": "0.3.0",
-    "@toa.io/prototype": "0.3.0",
-    "@toa.io/storages.mongodb": "0.3.0",
-    "@toa.io/storages.null": "0.3.0",
-    "@toa.io/storages.sql": "0.3.0",
-    "@toa.io/userland": "0.3.0"
+    "@toa.io/bindings.amqp": "0.3.1-alpha.0",
+    "@toa.io/bindings.http": "0.3.1-alpha.0",
+    "@toa.io/bindings.loop": "0.3.1-alpha.0",
+    "@toa.io/boot": "0.3.1-alpha.0",
+    "@toa.io/bridges.node": "0.3.1-alpha.0",
+    "@toa.io/cli": "0.3.1-alpha.0",
+    "@toa.io/core": "0.3.1-alpha.0",
+    "@toa.io/extensions.configuration": "0.3.1-alpha.0",
+    "@toa.io/extensions.exposition": "0.3.1-alpha.0",
+    "@toa.io/extensions.origins": "0.3.1-alpha.0",
+    "@toa.io/extensions.sampling": "0.3.1-alpha.0",
+    "@toa.io/norm": "0.3.1-alpha.0",
+    "@toa.io/operations": "0.3.1-alpha.0",
+    "@toa.io/prototype": "0.3.1-alpha.0",
+    "@toa.io/storages.mongodb": "0.3.1-alpha.0",
+    "@toa.io/storages.null": "0.3.1-alpha.0",
+    "@toa.io/storages.sql": "0.3.1-alpha.0",
+    "@toa.io/userland": "0.3.1-alpha.0"
   },
   "gitHead": "2be07592325b2e4dc823e81d882a4e50bf50de24"
 }
