--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -30,13 +30,13 @@ jobs:
           git config user.email "127577558+toabot@users.noreply.github.com"
           
           if [ ${{ github.base_ref }} = main ]; then
-            npx lerna version --conventional-graduate --sync-workspace-lock --no-commit-hooks --yes
+            npx lerna version --conventional-graduate --no-commit-hooks --yes
             git fetch
             git checkout dev
             git merge main
             git push --all origin --no-verify
           else
-            npx lerna version --conventional-prerelease --preid dev --sync-workspace-lock --no-commit-hooks --no-changelog --yes
+            npx lerna version --conventional-prerelease --preid dev --no-commit-hooks --no-changelog --yes
           fi
 
       - name: Publish packages
