--- a/libraries/tomato/package.json
+++ b/libraries/tomato/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@toa.io/mock",
+  "name": "@toa.io/tomato",
   "version": "0.4.0-dev.0",
-  "description": "Toa Mocks",
+  "description": "Gherkin Mock",
   "homepage": "https://toa.io",
   "author": {
     "name": "Artem Gurtovoi",
@@ -24,7 +24,7 @@
   "main": "source/index.js",
   "types": "types/index.d.ts",
   "devDependencies": {
-    "@toa.io/norm": "0.4.0-dev.0"
+    "randomstring": "*"
   },
   "dependencies": {
     "@toa.io/generic": "0.4.0-dev.0"
