--- a/libraries/concise/package.json
+++ b/libraries/concise/package.json
@@ -23,7 +23,7 @@
   },
   "main": "source/index.js",
   "devDependencies": {
-    "@toa.io/mock": "0.4.0-dev.1"
+    "@toa.io/tomato": "0.4.0-dev.1"
   },
   "dependencies": {
     "@toa.io/generic": "0.4.0-dev.0",
