--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -27,6 +27,7 @@
     "@toa.io/kubernetes": "0.4.0-dev.8",
     "@toa.io/norm": "0.4.0-dev.8",
     "@toa.io/yaml": "0.4.0-dev.8",
+    "dotenv": "16.0.3",
     "find-up": "5.0.0",
     "yargs": "17.6.2"
   },
