--- a/userland/example/components/tea/pots/manifest.toa.yaml
+++ b/userland/example/components/tea/pots/manifest.toa.yaml
@@ -22,6 +22,7 @@ operations:
 receivers:
   store.orders.created:
     transition: transit
+    foreign: false
     binding: amqp # avoid discovery
 
 configuration:
