--- a/libraries/yaml/package.json
+++ b/libraries/yaml/package.json
@@ -26,5 +26,8 @@
     "@toa.io/filesystem": "0.4.0",
     "@toa.io/generic": "0.4.0",
     "js-yaml": "4.1.0"
+  },
+  "devDependencies": {
+    "@types/js-yaml": "4.0.5"
   }
 }
