--- a/features/steps/.workspace/samples/collection/math.calculations.sum.yaml
+++ b/features/steps/.workspace/samples/collection/math.calculations.sum.yaml
@@ -1,10 +1,10 @@
-title: Should add numbers
+title: Should add numbers /integration
 input:
   a: 1
   b: 2
 output: 3
 ---
-title: Should add negative numbers
+title: Should add negative numbers /integration
 input:
   a: -1
   b: -2
