--- a/extensions/origins/package.json
+++ b/extensions/origins/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@toa.io/extensions.origins",
   "version": "0.7.2-dev.0",
-  "description": "Toa operations context HTTP client",
+  "description": "Toa Origins",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
-  "main": "src/index.js",
+  "main": "source/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toa-io/toa.git"
