--- a/extensions/origins/package.json
+++ b/extensions/origins/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@toa.io/core": "0.7.2-dev.0",
     "@toa.io/generic": "0.7.0",
+    "@toa.io/pointer": "0.7.2-dev.0",
     "@toa.io/schema": "0.7.2-dev.0",
     "@toa.io/yaml": "0.7.2-dev.0",
     "node-fetch": "2.6.7"
