--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toa.io/cli",
-  "version": "0.20.0-dev.5",
+  "version": "0.20.0-dev.4",
   "description": "Toa CLI",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
@@ -27,6 +27,7 @@
     "@toa.io/kubernetes": "0.20.0-dev.5",
     "@toa.io/norm": "0.20.0-dev.5",
     "@toa.io/yaml": "0.20.0-dev.5",
+    "dotenv": "16.1.1",
     "find-up": "5.0.0",
     "yargs": "17.6.2"
   },
