--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@cucumber/cucumber": "9.1.2",
     "@types/jest": "28.1.1",
     "@types/node": "18.0.0",
+    "@types/randomstring": "1.1.8",
     "clone-deep": "4.0.1",
     "dotenv": "16.0.3",
     "eslint-config-standard-with-typescript": "35.0.0",
