--- a/libraries/schemas/package.json
+++ b/libraries/schemas/package.json
@@ -22,6 +22,7 @@
     "access": "public"
   },
   "main": "source/index.js",
+  "types": "types/index.d.ts",
   "dependencies": {
     "@toa.io/concise": "0.20.0-dev.12",
     "@toa.io/filesystem": "0.20.0-dev.12",
