--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -4,7 +4,8 @@
   "description": "Toa Exposition",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/toa-io/toa#readme",
-  "main": "src/index.js",
+  "main": "transpiled/index.js",
+  "types": "transpiled/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toa-io/toa.git"
@@ -14,23 +15,6 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "devDependencies": {
-    "@types/express": "4.17.13"
-  },
-  "dependencies": {
-    "@toa.io/bindings.amqp": "0.20.0-dev.12",
-    "@toa.io/console": "0.20.0-dev.12",
-    "@toa.io/core": "0.20.0-dev.12",
-    "@toa.io/generic": "0.20.0-dev.12",
-    "@toa.io/schema": "0.20.0-dev.12",
-    "@toa.io/yaml": "0.20.0-dev.12",
-    "cors": "2.8.5",
-    "express": "4.18.1",
-    "path-to-regexp": "6.2.0"
   },
   "jest": {
     "preset": "ts-jest",
