--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@types/randomstring": "1.1.8",
     "clone-deep": "4.0.1",
     "dotenv": "16.0.3",
-    "eslint-config-standard-with-typescript": "35.0.0",
     "execa": "5.1.1",
     "husky": "8.0.3",
     "jest": "29.5.0",
@@ -54,12 +53,14 @@
     "snazzy": "9.0.0",
     "standard": "17.0.0",
     "ts-jest": "29.1.0",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.1",
+    "ts-standard": "12.0.2",
+    "typescript": "5.1.3"
   },
   "scripts": {
     "prepare": "npx husky install",
     "test": "npm run test:lint && npm run test:unit && npm run test:features:unit && npm run test:samples:unit",
-    "test:lint": "npx standard --verbose | npx snazzy",
+    "test:lint": "npx standard | npx snazzy && npx ts-standard | npx snazzy",
     "test:unit": "npx jest --roots runtime connectors extensions operations libraries features userland",
     "test:integration": "npx jest --roots integration --runInBand --testTimeout 180000",
     "test:features": "npx cucumber-js",
@@ -68,7 +69,7 @@
     "test:samples:all": "TOA_DEV=1 toa replay userland/example",
     "test:all": "npm run test && npm run test:integration && npm run test:features",
     "integration:deploy": "npm run publish:local && npx toa deploy ./integration/context",
-    "lint": "npx standard --verbose --fix | npx snazzy",
+    "lint": "npx standard --verbose --fix | npx snazzy && npx ts-standard --verbose --fix | npx snazzy",
     "npm:login:local": "npm adduser --registry http://localhost:4873 --auth-type=legacy",
     "version:dev": "npx lerna@6.5.1 version --conventional-prerelease --preid dev --no-commit-hooks --no-changelog --yes --no-git-tag-version",
     "publish:local": "npm publish --workspaces --registry=http://localhost:4873",
@@ -90,6 +91,12 @@
       "**/transpiled/"
     ]
   },
+  "ts-standard": {
+    "ignore": [
+      "*.d.ts",
+      "*.js"
+    ]
+  },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
@@ -107,11 +114,5 @@
       "**/(*.)+(test).(js|ts)"
     ],
     "bail": true
-  },
-  "eslintConfig": {
-    "extends": "standard-with-typescript",
-    "parserOptions": {
-      "project": "./tsconfig.json"
-    }
   }
 }
