--- a/libraries/filesystem/package.json
+++ b/libraries/filesystem/package.json
@@ -22,6 +22,7 @@
     "access": "public"
   },
   "main": "source/index.js",
+  "types": "types/index.d.ts",
   "dependencies": {
     "@toa.io/generic": "0.20.0-dev.15",
     "fast-glob": "3.2.12",
