--- a/extensions/exposition/package.json
+++ b/extensions/exposition/package.json
@@ -17,7 +17,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@toa.io/generic": "0.20.0-dev.15"
+    "@toa.io/generic": "0.20.0-dev.15",
+    "@types/cors": "2.8.13",
+    "@types/express": "4.17.17",
+    "cors": "2.8.5",
+    "express": "4.18.2"
   },
   "jest": {
     "preset": "ts-jest",
