--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,35 +17,13 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: developer
       MONGO_INITDB_ROOT_PASSWORD: secret
-  mongos:
-    image: 'bitnami/mongodb-sharded:latest'
-    hostname: mongos
+  mongodb-restart:
+    image: mongo:5.0.8
+    container_name: mongodb-restart
+    ports: ['27017:27017']
     environment:
-      - MONGODB_SHARDING_MODE=mongos
-      - MONGODB_CFG_PRIMARY_HOST=mongodb-cfg
-      - MONGODB_CFG_REPLICA_SET_NAME=cfgreplicaset
-      - MONGODB_REPLICA_SET_KEY=replicasetkey123
-      - MONGODB_ROOT_PASSWORD=password123
-    ports:
-      - "27017:27017"
-  mongodb-shard0-primary:
-    image: 'bitnami/mongodb-sharded:latest'
-    environment:
-      - MONGODB_SHARDING_MODE=shardsvr
-      - MONGODB_MONGOS_HOST=mongos
-      - MONGODB_ROOT_PASSWORD=password123
-      - MONGODB_REPLICA_SET_MODE=primary
-      - MONGODB_REPLICA_SET_KEY=replicasetkey123
-      - MONGODB_REPLICA_SET_NAME=shard0
-  mongodb-configsvr-primary:
-    image: 'bitnami/mongodb-sharded:latest'
-    hostname: mongodb-cfg
-    environment:
-      - MONGODB_SHARDING_MODE=configsvr
-      - MONGODB_ROOT_PASSWORD=password123
-      - MONGODB_REPLICA_SET_MODE=primary
-      - MONGODB_REPLICA_SET_KEY=replicasetkey123
-      - MONGODB_REPLICA_SET_NAME=cfgreplicaset
+      MONGO_INITDB_ROOT_USERNAME: developer
+      MONGO_INITDB_ROOT_PASSWORD: secret
   postgres:
     image: postgres:14.4
     ports: ['5432:5432']
