--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "knex": "2.4.2",
     "mongodb": "5.9.1",
     "randomstring": "1.3.0",
+    "testcontainers": "10.2.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1"
   },
